--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <a href="#s-3" class="cta" style="margin: 0 10px 10px 0;">
                     Why You Deserve This Website ↓
                 </a>
+                <a href="#motivational-quotes" class="cta" style="margin: 0 10px 10px 0;">
+                    Words to Remember ↓
+                </a>
             </div>
             
             <a href="#friendsSince" class="cta">See How Long We've Been Friends ↓</a>
@@ -198,6 +201,44 @@
                     <p class="r-p">You have been through a lot. ALONE. Your standards must be raised! </p>
                 </div>
 
+            </div>
+        </div>
+    </section>
+
+    <section id="motivational-quotes" class="s-pad">
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="h3 mb-10 centered-text" style="color:var(--accent)">✨ Words to Remember ✨</h2>
+            <div class="quotes-container" style="display: flex; flex-direction: column; gap: 2rem;">
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(-1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"You will never be a loser in my eyes"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"You are a winner"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(-1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"I'm proud to call you my best friend"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"You're irreplaceable"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(-1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"Thank you for being you"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"The world is better with you in it"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(-1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"You matter more than you realize"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"You're doing better than you think"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(-1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"Your eyes are beautiful af"</p>
+                </div>
+                <div class="quote-card" style="background: var(--panel); padding: 2.5rem; border-radius: 20px; box-shadow: var(--card-shadow); border: 2px solid var(--accent); transform: rotate(1deg); transition: transform 0.3s ease;">
+                    <p class="h2" style="color: var(--accent); font-style: italic; margin: 0; line-height: 1.5;">"I love how genuine your smile is"</p>
+                </div>
             </div>
         </div>
     </section>
